add initial support for sp wallets